# PW_project2

./: .gitignore  README.md
django_app/: pyproject.toml
django_app/django_app/: settings.py  urls.py
django_app/vehicle_revisions/: apps.py  models.py  urls.py  views.py
django_app/vehicle_revisions/migrations/: 0001_initial.py  0002_rename_activeplates_activeplate_and_more.py  0003_alter_revision_revision_date_alter_vehicle_prod_date.py  0004_alter_revision_revision_date_alter_vehicle_prod_date.py
django_app/vehicle_revisions/static/: index.php
django_app/vehicle_revisions/static/css/: addForm.css  dettagliStyle.css  genericCard.css  revisioneCard.css  style.css  targaCard.css  textarea.css
django_app/vehicle_revisions/static/includes/: addForm.php  db_connection.php  footer.php  header.php  navigation.php
django_app/vehicle_revisions/static/js/: activePage.js  ajaxHelper.js  resizeMotivazioneField.js
django_app/vehicle_revisions/static/js/dettagli/: dettagliRevisione.js  dettagliTarga.js  dettagliVeicolo.js
django_app/vehicle_revisions/static/js/initPages/: initDettagliRevisione.js  initDettagliTarga.js  initDettagliVeicolo.js
django_app/vehicle_revisions/static/js/modules/: addRevisionForm.js  checkRevisionFields.js  handleAjax.js  loadRevisions.js  revisionHandlers.js  (+1 more)
django_app/vehicle_revisions/static/pages/: revisioni.php  targhe.php  veicoli.php
django_app/vehicle_revisions/templates/: base_generic.html  index.html  plate-details.html  plate-search.html  revision-details.html  revision-search.html  vehicle-details.html  vehicle-search.html
(+17 files in other folders)
