[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["sebastianobosio <sebastiano.bosio01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
pylint = "^3.2.3"
pylint-django = "^2.5.5"
djlint = "^1.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
